--- a/Public/allAcc.html
+++ b/Public/allAcc.html
@@ -64,7 +64,7 @@
                     if (result.message) {
                         alert(result.message);
                         loadAccounts(); // โหลดข้อมูลใหม่หลังจากลบ
-                        localStorage.clear();
+                        // localStorage.clear();
                     } else if (result.error) {
                         alert(result.error);
                     }
